tiny fix for checking logo on mobile

--- a/styles.css
+++ b/styles.css
@@ -251,6 +251,10 @@ footer {
   .nav {
     flex-direction: column;
   }
+
+  .logo {
+    justify-content: center;
+  }
 }
 
 @media (max-width: 1024px){
